Bug 451091 - Show Samba status monitor button under Share tab does nothing when clicked.
Summary: Show Samba status monitor button under Share tab does nothing when clicked.
Status: RESOLVED FIXED
Alias: None
Product: kdenetwork-filesharing
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-03 16:02 UTC by ioo+kde
Modified: 2022-03-22 09:37 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ioo+kde 2022-03-03 16:02:56 UTC
SUMMARY
Show Samba status monitor button under Share tab does nothing when clicked.


STEPS TO REPRODUCE
1. Right click on a folder that is shared
2. Select Properties->Share
3. Click on the Show Samba status monitor botton

OBSERVED RESULT


EXPECTED RESULT
Nothing happens.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 5.24.1
KDE Plasma Version: 5.24.1
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
This was definitely working in previous versions. I used it all the time. Note there is nothing recorded in the journalctl it appears that it is just a dead button now.
Comment 1 ioo+kde 2022-03-03 16:20:21 UTC
I have another observation.

The android notification and the KDE Connect notification progress bars during the send do not match. They are out of sync.

On Android, I see the file progress bar complete and the status changes to "Sent file"
On KDE Neon, I see the KDE Connect Receiving file progress bar stop at 80% and freeze. It never completes.

If I look at the target directory, the file did not complete and still has a .part filename.

I believe this is the problem. The KDE connect server is telling the receiver that the file has finished transferring before it actually finishes and then it leaves the receiver frozen and never completed the transfer.
Comment 2 Nate Graham 2022-03-22 02:03:07 UTC
Do you have the Info Center app installed?
Comment 3 Harald Sitter 2022-03-22 07:59:16 UTC
Did we maybe break this by moving to json?

void SambaUserSharePlugin::showSambaStatus()
{
    KService::Ptr kcm = KService::serviceByStorageId(QStringLiteral("smbstatus"));
    if (!kcm) {
        // TODO: meh - we have no availability handling. I may have a handy class in plasma-disks
        return;
    }
    KIO::ApplicationLauncherJob(kcm).start();
}
Comment 4 Alexander Lohnau 2022-03-22 09:02:17 UTC
Yeah, seems like we used KService to fetch the application instead of using kinfocenter directly
Comment 5 Bug Janitor Service 2022-03-22 09:19:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/kdenetwork-filesharing/-/merge_requests/25
Comment 6 Alexander Lohnau 2022-03-22 09:36:32 UTC
Git commit 06b22a64387d416d27d212f5573346f3573af445 by Alexander Lohnau.
Committed on 22/03/2022 at 09:17.
Pushed by alex into branch 'master'.

Fix opening of samba KInfoCenter KCM

M  +4    -7    samba/filepropertiesplugin/sambausershareplugin.cpp

https://invent.kde.org/network/kdenetwork-filesharing/commit/06b22a64387d416d27d212f5573346f3573af445
Comment 7 Alexander Lohnau 2022-03-22 09:36:53 UTC
Git commit 762748a59094a9a0e268d9132943589ad14f7b59 by Alexander Lohnau.
Committed on 22/03/2022 at 09:36.
Pushed by alex into branch 'release/22.04'.

Fix opening of samba KInfoCenter KCM


(cherry picked from commit 06b22a64387d416d27d212f5573346f3573af445)

M  +4    -7    samba/filepropertiesplugin/sambausershareplugin.cpp

https://invent.kde.org/network/kdenetwork-filesharing/commit/762748a59094a9a0e268d9132943589ad14f7b59