Fix opening of samba KInfoCenter KCM

BUG: 451091